tests/fixtures/syntax/invalid/dir_subject_string_literal.repor
case "dir subject requires a workspace path literal, not a string literal" {
  $ true
  assert {
    dir "out" exists
  }
}
